# ITMO

./: .gitmodules  README.md
Databases/Lab 1/: create_tables.sql  delete_tables.sql  infological_model.drawio  populate_database.sql
Databases/Lab 2/: 1.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql
Databases/Lab 4/: query_1.sql  query_2.sql
DiscreteMath/Semester 2/: CW.docx  HW4.docx
Informatics/Lab 4/data/: naive_converted.xml  wed_timetable.csv  wed_timetable.xml  with_lib_converted.xml
Informatics/Lab 4/lab4/: with_lib.py
Informatics/Lab 5/: main.py  pyproject.toml  result.xlsx  utils.py
Informatics/Lab 5/dop2/: .~lock.data.csv#
Informatics/Lab 5/dop3/: data.csv  dop3.ipynb  dop3.py
Informatics/Lab 5/res/: final_result.ods  final_result.xlsx
Informatics/Lab 5/solution/: data.csv  dop2.xlsx  dop3.py
Informatics/tests/: perestanovki.py
Life Safety/: Отношения.odt  Сон.docx  ФинБез.odt
LinearAlgebra/: 1.py  2.py  3.py  4.py  5.py  6.py  b.py  gramm_shmidt.py  gs.py  pyproject.toml  scalar_multiply.py  vec_degree.py
LinearAlgebra/tensors/: 12-2.py  12.py  5-2.py  5.py  6.py
OPD/: lab6.asm  lab6_with_hlt.asm  lab7-microprogram  lab7-test.asm
OPD/Lab 3/: program.txt  test2.asm  tracing.csv
OPD/Lab 4/: .~lock.tracing.csv#  program.txt  subprogram.txt  tracing.csv  tracing2.csv
OPD/Lab 5/: task.asm
OPD/Rubezsh/: test.asm
Programming/Lab 5/: README.md
Programming/Lab 5/src/: Main.java
Programming/Lab 5/src/commands/: Clear.java  Command.java  CommandRunner.java  ConsoleCmdCommand.java  Exit.java  (+15 more)
Soft Skills/: Тест Белбина.docx
(+101 files in other folders)
