[tool.poetry]
name = "lab5"
version = "1.0.0"
description = ""
authors = ["Maksim Gusev <51376126+AlanTheKnight@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"
lxml = "^4.9.3"
numpy = "^1.26.2"
plotly = "^5.18.0"
pandas = "^2.1.4"
ipykernel = "^6.27.1"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
